fix readable and journal themes

--- a/leselys/static/css/journal.css
+++ b/leselys/static/css/journal.css
@@ -6564,3 +6564,17 @@ legend {
 .affix {
   position: fixed;
 }
+
+/* Socketubs FIX */
+#ribbon {
+  height: 35px !important;
+}
+
+@media handheld, only screen and (max-width: 768px) {
+  #ribbon {
+    height: 185px !important;
+  }
+  #ribbon.ribbon-three {
+    height: 150px !important;
+  }
+}
