--- a/leselys/static/css/leselys.css
+++ b/leselys/static/css/leselys.css
@@ -322,3 +322,6 @@ input#password {
 .hidden {
   display: none !important;
 }
+a i {
+  text-decoration: none;
+}
